# FireEngine-V2

./: .gitignore  .ignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
.cache/clangd/index/: t.cpp.41552B927A69CE9F.idx
demos/: sun_and_mars_bloom_demo.cpp
failed_experiments/: failed_transformation.cpp
include/: Camera.h  EBoxGeometry.h  EBufferGeometry.h  EFrameBuffer.h  EGreyscaleEffect.h  EGroup.h  ELight.h  EMaterial.h  EMesh.h  EModel.h  EModelLoader.h  EObject3D.h  EObjectGeometry.h  EPostProcessingEffect.h  EPostProcessingPipeline.h  EQuadGeometry.h  ERenderer.h  ETexture.h  EUI.h  EUVSphereGeometry.h  EWorld.h  Error.h  Mesh.h  Model.h  Shader.h  Window.h  tEModel.h
include/glad/: glad.h
models/: Teapot.fbx  cube.gltf  cube.mtl
shaders/fragment/: Downsample.glsl  GaussianBlur.glsl  GaussianBlurHorizontal.glsl  GaussianBulrVertical.glsl  Greyscale.glsl  Invert.glsl  MixBloom.glsl  PBR.glsl  Quantize.glsl  Shadow.glsl  Threshold.glsl  basic.frag  basic.glsl  basic2.glsl  cubeGouradShading.glsl  cubesFrag.glsl  diffuse_specularFrag.glsl  directional_lightFrag.glsl  displayScreen.glsl  env_map.glsl  fb.glsl  grid.glsl  kernel_effect1.glsl  lightFrag.glsl  materialFrag.glsl  normal_material.glsl  outlineColor.glsl  point_lightFrag.glsl  skybox.glsl  spotlightFrag.glsl  test.glsl
shaders/utils/: utils.glsl
shaders/vertex/: Shadow.glsl  basic.glsl  basic.vert  basic2.glsl  cubeGouradShading.glsl  cubesVert.glsl  diffuse_specularVert.glsl  doc.md  grid.glsl  lightVert.glsl  quad_verts.glsl  sykbox.glsl  test.glsl
src/: CMakeLists.txt  Camera.cpp  EBoxGeometry.cpp  EBufferGemotry.cpp  EBufferGeometry.cpp  EFrameBuffer.cpp  EGreyscaleEffect.cpp  EGroup.cpp  ELight.cpp  EMaterial.cpp  EMesh.cpp  EModel.cpp  EModelLoader.cpp  EObject3D.cpp  EObjectGemotry.cpp  EPostProcessingEffect.cpp  EPostProcessingPipeline.cpp  EQuadGeometry.cpp  ERenderer.cpp  ERenderer.cpz~  ETexture.cpp  EUI.cpp  EUVSphereGeometry.cpp  EWorld.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Window.cpp  colored_tri.cpp  ex1.cpp  glad.c  main.cpp  phong_matrials.cpp  phong_shading.cpp  point_light.cpp  rotate_cubes.cpp  specular_diffuse.cpp  tEModel.cpp  tex_overlay.cpp  textured_rectangle.cpp  (+3 more)
